--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-expand navbar-dark bg-primary mb-3">
     <div class="container">
-        <a href="/" class="navbar-brand">
+        <a href="{{'/' | url}}" class="navbar-brand">
             <img src="/images/logo_stargazers_bug.svg" alt="stargazer logo" style="max-width:35px;">stargazer
         </a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="/" class="nav-link">Home</a>
+                <a href="{{'/' | url}}" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-                <a href="/cast" class="nav-link">Cast</a>
+                <a href="{{'/cast' | url}}" class="nav-link">Cast</a>
             </li>
             <li class="nav-item">
-                <a href="/collectibles" class="nav-link">Collectibles</a>
+                <a href="{{'/collectibles' | url}}" class="nav-link">Collectibles</a>
             </li>
         </ul>
     </div>
